--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "tech",
+  "name": "technical",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "serve:api": "node api/server.js",
+    "serve": "concurrently \"npm:serve:api\" \"npm:dev\"",
+    "dev": "vite"
   },
   "dependencies": {
-    "json-server": "^1.0.0-beta.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "pinia": "^2.3.0",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
