--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "dev": "vite",
     "serve:api": "node api/server.js",
-    "serve": "concurrently \"npm:serve:api\" \"npm:dev\"",
-    "dev": "vite"
+    "build": "vite build",
+    "preview": "vite preview",
+    "start": "node api/server.js"
   },
   "dependencies": {
     "axios": "^1.7.9",
